[gd_scene load_steps=4 format=3 uid="uid://c5laufd7jhhye"]

[ext_resource type="Script" uid="uid://cgn01p3i16f7d" path="res://scenes/run/run_ui/run_ui.gd" id="1_fj47l"]
[ext_resource type="Theme" uid="uid://cd5n2wr2q5c3q" path="res://assets/themes/ui_theme.tres" id="2_evhwu"]
[ext_resource type="PackedScene" uid="uid://y0yufq6cq4f0" path="res://scenes/run/run_ui/panel_level_data/panel_level_data.tscn" id="3_2o1t7"]

[node name="RunUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fj47l")

[node name="ButtonConfirm" type="Button" parent="."]
custom_minimum_size = Vector2(96, 34)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 140.0
offset_right = 48.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_evhwu")
text = "CONFIRM"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -116.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLevelData0" parent="VBoxContainer" instance=ExtResource("3_2o1t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelLevelData1" parent="VBoxContainer" instance=ExtResource("3_2o1t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelLevelData2" parent="VBoxContainer" instance=ExtResource("3_2o1t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="ButtonConfirm" to="." method="_on_button_confirm_pressed"]
